# bianyiyuanli-main

./: ACTIVITY_BAR_LAYOUT.md  EXPLORER_REDESIGN_SUMMARY.md  EXPLORER_VSCODE_REDESIGN.md  GIT_PANEL_README.md  IMPLEMENTATION_SUMMARY.md  MODERN_UI_GUIDE.md  README.md  README_MODERN_UI.md  UI_MODERNIZATION_SUMMARY.md  example.nx  lea_demo.nx  nexa_cli.py  pyproject.toml  tem.txt  test_git_panel.py  高分课程设计编译器项目完整方案.md
.claude/: settings.local.json
_tmp_multifile/: main.nx  utils.nx
_tmp_multifile_tests/: main.nx  main_string.nx  mathlib.nx  utils.nx
_tmp_stdlib_tests/: main.nx
docs/: 12周任务实现说明.md  Nexa语言语法与使用说明.md  tkinter_desktop_ide_note.md
nexa/: __init__.py  compiler.py  vm.py
nexa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nexa/backend/: asm_x64.py  build.py  llvm_backend.py  regalloc.py
nexa/frontend/: ast.py  diagnostics.py  lexer.py  macro.py  parser.py  tokens.py
nexa/ide/: __init__.py  app.py  app_backup.py  app_modern.py
nexa/ir/: hir.py  lower.py  mir.py
nexa/opt/: __init__.py  passes.py
nexa/report/: __init__.py  html_report.py
nexa/runtime/: nexa_rt.c  rt_core.py
nexa/sema/: checker.py  monomorphize.py  symbols.py  types.py
pytest-cache-files-run/test_core_and_full_mode_and_gr0/: ast.dot
pytest-cache-files-run/test_html_report_writer0/: report.html
test/test1/: README.md  error_demo.nx  loop_demo.nx  (+3 more)
tests/: test_language_enhancements.py  test_lexer_parser.py  test_loop_features.py  test_native_backend.py  test_optimizations.py  test_regressions.py  test_runtime_and_regalloc.py  test_sema_ir_backend.py
(+6 files in other folders)
