[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexa"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["nexa*"]
exclude = ["out*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
